# c_plus_plus

./: README.md
Final_Project/: file2.csv
cpp/Final_Project/: CMakeLists.txt  Record.cpp  Record.h  Register.cpp  Register.h  main.cpp
cpp/RingBuffer/: CMakeLists.txt  main.cpp  ringbuf.h
cpp/adding_long_numbers/: CMakeLists.txt  main.cpp
cpp/arithmetic_mean/: CMakeLists.txt  main.cpp
cpp/build-Final_Project-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  EmployeeRegister  build.ninja  cmake_install.cmake  rules.ninja
cpp/build-RingBuffer-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  RingBuffer  build.ninja  cmake_install.cmake  rules.ninja
cpp/build-SGA_1-Desktop_Qt_5_15_2_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja
cpp/build-adding_long_numbers-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  adding_long_numbers  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja
cpp/build-arithmetic_mean-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  arithmetic_mean  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja
cpp/build-common_prefix-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja
cpp/build-createMapFromVec-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  createMapFromVec  (+2 more)
(+209 files in other folders)
